# pages

./: .flutter-plugins-dependencies  .gitignore_TENANT  Dockerfile.web  QPAGES_TENANT.md  TENANT_pubspec.yaml  docker-compose.yml  nginx.conf  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
android/: local.properties
assets/client/qspace/: overlay.json
assets/suite/saas/: manifest.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: init.sql
backend/src/: main.rs
backend/src/handlers/: admin.rs  auth.rs  manifest.rs  mod.rs  tenant.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs
frontend/: pubspec.yaml
frontend/android/: build.gradle.kts
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  main_qspace.dart  qspace_pages.dart
frontend/lib/app/: app_root.dart  app_shell.dart  main_mobile.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/test/: widget_test.dart
frontend/windows/runner/: main.cpp  (+1 more)
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart  main_qspace.dart
lib/canon/: canon_ids.dart
lib/experience/: qp_structure.dart
lib/infrastructure/: auth_provider.dart
lib/interface/: app_root.dart  app_router.dart  qpages_app.dart
qspace_resources/: pubspec.yaml
qspace_resources/lib/: qspace_resources.dart
qspace_resources/test/: qspace_resources_test.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+304 files in other folders)
